--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev" : "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
+    "firebase": "^9.6.9",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
