--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.9",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "react-router-dom": "^4.3.1",
+    "react-bootstrap": "^2.2.1",
+    "react-cookie": "^3.0.4",
     "react-cookies": "^0.1.0",
-    "react-cookie": "^3.0.4"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "5.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
