--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.4"
   }
 }
