--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,11 @@
     "nodemon": "^2.0.15",
     "redux": "^4.1.2",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.7.4"
+    "mongoose": "^5.7.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "kafka-node": "^5.0.0",
+    "kafkajs": "^1.15.0",
+    "mocha": "^5.2.0"
   }
 }
