--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,11 +11,13 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.9",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-cookie": "^3.0.4",
     "react-cookies": "^0.1.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -23,8 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4",
-    "jwt-decode": "^2.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
