--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:3001",
+  "proxy": "http://3.21.21.21:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
